--- a/questionnaire.Rmd
+++ b/questionnaire.Rmd
@@ -12,10 +12,12 @@ opts_chunk$set(echo=FALSE, dpi=200)
 ```{r question-map}
 source("R/sqlite.R")
 questions <- collect_table("questions")
-question_names <- c("cr1", "cr1describe", "cr2describe", "cp1", "cp1describe",
-                    "repo1", "repo1describe", "rec1", "rec1describe",
-                    "cfo1", "cfo2", "cfo3", "oss1", "oss2", "env1", "env2",
-                    "inter1", "inter2", "inter3")
+question_names <- c(
+  "cr1", "cr1describe", "cr2describe", "cp1", "cp1describe",
+  "repo1", "repo1describe", "rec1", "rec1describe", "cfo1", "cfo2", "cfo3",
+  "oss1", "oss2", "env1", "env2", "inter1", "inter2", "inter3"
+)
+
 questions %>%
   filter(question_name %in% question_names) %>%
   select(question_name, question_text) %>%
@@ -24,5 +26,11 @@ questions %>%
 
 ```{r questionnaire, echo=1}
 questionnaire <- collect_table("questionnaire")
-kable(head(questionnaire))
+
+agreement_questions <- c(
+  "cr1", "cp1", "repo1", "rec1", "cfo1", "cfo2", "cfo3",
+  "oss1", "oss2", "env1", "env2", "inter1", "inter2", "inter3"
+)
+
+kable(head(questionnaire[c("subj_id", agreement_questions)]))
 ```
