--- a/questionnaire.Rmd
+++ b/questionnaire.Rmd
@@ -19,8 +19,8 @@ question_names <- c(
   "oss1", "oss2", "env1", "env2", "inter1", "inter2", "inter3"
 )
 
-get_question_text <- function(question_name) {
-  filter(questions, question_name == "cr1")$question_text
+get_question_text <- function(name) {
+  filter(questions, question_name == name)$question_text
 }
 
 questions %>%
@@ -29,15 +29,13 @@ questions %>%
   kable()
 ```
 
-```{r questionnaire, echo=1}
+```{r questionnaire}
 questionnaire <- collect_table("questionnaire")
 
 agreement_questions <- c(
   "cr1", "cp1", "repo1", "rec1", "cfo1", "cfo2", "cfo3",
   "oss1", "oss2", "env1", "env2", "inter1", "inter2", "inter3"
 )
-
-kable(head(questionnaire[c("subj_id", agreement_questions)]))
 ```
 
 ## Changed reasoning
@@ -65,16 +63,56 @@ questionnaire_by_top20_language <- collect_table("languages") %>%
   drop_na(language_name) %>%
   group_by(language_name) %>%
   summarize(
-    cr1 = mean(cr1, na.rm = TRUE)
+    cr1 = mean(cr1, na.rm = TRUE),
+    cp1 = mean(cp1, na.rm = TRUE),
+    rec1 = mean(rec1, na.rm = TRUE),
+    cfo1 = mean(cfo1, na.rm = TRUE),
+    cfo2 = mean(cfo2, na.rm = TRUE),
+    inter1 = mean(inter1, na.rm = TRUE),
+    inter2 = mean(inter2, na.rm = TRUE)
   ) %>%
-  rank_by("cr1")
+  rank_by("cr1") %>%
+  rank_by("cp1") %>%
+  rank_by("rec1") %>%
+  rank_by("cfo1") %>%
+  rank_by("cfo2") %>%
+  rank_by("inter1") %>%
+  rank_by("inter2")
 
-questionnaire_by_top20_language %<>% order_language_by("cr1_rank")
-ggplot(questionnaire_by_top20_language) +
-  aes(language_ordered, cr1) +
-  geom_point() +
-  annotate("label", x = "python", y = 2.5, label = paste(strwrap(get_question_text("cr1"), 33), collapse = "\n")) +
-  coord_flip(ylim = c(1,5)) +
-  scale_x_discrete(position = "top") +
-  labs(x = "", y = "agreement")
+by_language_plot <- function(name, x = "python", y = 2.5) {
+  questionnaire_by_top20_language %<>% order_language_by(paste0(name, "_rank"))
+  ggplot(questionnaire_by_top20_language) +
+    aes_string("language_ordered", name) +
+    geom_point() +
+    annotate("label", x = x, y = y, label = paste(strwrap(get_question_text(name), 33), collapse = "\n")) +
+    coord_flip(ylim = c(1,5)) +
+    scale_x_discrete(position = "top") +
+    labs(x = "", y = "agreement")
+}
+  
+by_language_plot("cr1")
+```
+
+```{r personality}
+by_language_plot("cp1")
+```
+
+```{r recursion}
+by_language_plot("rec1")
+```
+
+```{r code-for-others}
+by_language_plot("cfo1", y = 1.8)
+```
+
+```{r code-for-team}
+by_language_plot("cfo2", y = 1.8)
+```
+
+```{r interference}
+by_language_plot("inter1", y = 4)
+```
+
+```{r harm}
+by_language_plot("inter2", y = 4)
 ```
