--- a/languages.Rmd
+++ b/languages.Rmd
@@ -3,57 +3,12 @@ title: Programming languages
 ---
 ```{r config, include=FALSE}
 library(knitr)
-library(tidyverse)
-library(magrittr)
 opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE,
-               fig.width=3, fig.height=3)
-devtools::load_all()
+               fig.width=3, fig.height=3,
+               cache=TRUE)
+read_chunk("languages.R")
 ```
-```{r languages}
-languages <- collect_table("languages")
-language_ratings <- collect_table("language_ratings")
-language_info <- collect_table("language_info")
-
-language_summary <- languages %>%
-  group_by(language_name) %>%
-  summarize(
-    frequency = n(),
-    proficiency = mean(proficiency, na.rm = TRUE),
-    years_used = mean(years_used, na.rm = TRUE)
-  ) %>%
-  rank_by("frequency") %>%
-  rank_by("years_used") %>%
-  rank_by("proficiency")
-
-# must be ordered!
-top20_languages <- order_language_by(language_summary, "frequency_rank", levels_only = TRUE)[1:20]
-
-not_top20_language_summary <- language_summary %>%
-  filter(!(language_name %in% top20_languages)) %>%
-  summarize(
-    frequency = sum(frequency, na.rm = TRUE),
-    years_used = mean(years_used, na.rm = TRUE),
-    proficiency = mean(proficiency, na.rm = TRUE),
-    frequency_rank = Inf,
-    years_used_rank = Inf,
-    proficiency_rank = Inf
-  ) %>%
-  mutate(language_name = "other")
-
-top20_language_summary <- language_summary %>%
-  filter(language_name %in% top20_languages) %>%
-  bind_rows(not_top20_language_summary)
-
-language_ratings_summary <- language_ratings %>%
-  group_by(language_name, question_name, question_tag) %>%
-  summarize(
-    n = n(),
-    agreement_num = mean(agreement_num, na.rm = TRUE)
-  ) %>%
-  ungroup()
-
-top20_ratings_summary <- language_ratings_summary %>%
-  filter(language_name %in% top20_languages)
+```{r setup}
 ```
 
 ## Language frequency
@@ -70,7 +25,6 @@ ggplot(top20_language_summary) +
 ## Experience
 
 ```{r languages-per-person}
-
 ```
 
 ```{r experience}
@@ -81,8 +35,6 @@ ggplot(top20_language_summary) +
   coord_flip() +
   labs(x = "", y = "average years used", title = "Experience")
 ```
-
-
 
 ## Proficiency
 
@@ -105,7 +57,7 @@ top20_language_summary %>%
   filter(language_name != "other") %>%
   select(-c(frequency, proficiency, years_used, language_ordered)) %>%
   gather(rank_var, rank, -language_name) %>%
-  ggplot() +
+ggplot() +
   aes(rank_var, rank, group = language_name) +
   geom_line() +
   scale_y_reverse(breaks = 1:20, labels = top20_languages) +
@@ -148,19 +100,6 @@ ggplot(top20_intuitive) +
 ## Reuse
 
 ```{r reuse, fig.width=6}
-recode_reuse <- function(frame) {
-  reuse_levels <- c("adapt",  "reuse", "adopt")
-  reuse_map <- data_frame(
-    question_tag = reuse_levels,
-    reuse_label = factor(reuse_levels, levels = reuse_levels)
-  )
-  if(missing(frame)) return(reuse_map)
-  left_join(frame, reuse_map)
-}
-
-top20_reuse <- filter(top20_ratings_summary, question_name == "reuse") %>%
-  recode_reuse()
-
 top20_reuse_adaptive_levels <- top20_reuse %>%
   filter(question_tag == "adapt") %>%
   rank_by("agreement_num") %>%
@@ -178,33 +117,10 @@ ggplot(top20_reuse) +
 
 ## Paradigms
 
-```{r paradigms}
-language_info <- collect_table("language_info")
-language_info_summary <- language_info %>%
-  group_by(paradigms) %>%
-  summarize(n = n()) %>%
-  mutate(pct = prop.table(n)) %>%
-  arrange(desc(n))
-
-top20_language_info <- language_info %>%
-  filter(language_name %in% top20_languages)
-
-top20_language_info_summary <- top20_language_info %>%
-  group_by(paradigms) %>%
-  summarize(n = n()) %>%
-  mutate(pct = prop.table(n)) %>%
-  arrange(desc(n))
-
-top_paradigms_tbl <- left_join(top20_language_info_summary, language_info_summary, by = "paradigms", suffix = c("_top20", "_all")) %>%
-  filter(row_number() <= 8)
-top_paradigms <- top_paradigms_tbl$paradigms
+```{r top-paradigms, results="asis"}
 kable(top_paradigms_tbl)
+```
 
-top20_language_paradigms <- top20_language_info %>%
-  filter(paradigms %in% top_paradigms)
-
-top20_language_paradigms %>%
-  group_by(language_name) %>%
-  summarize(n_top8_paradigms = n()) %>%
-  kable()
+```{r paradigms-of-top-languages, results="asis"}
+kable(top20_language_paradigms)
 ```
