--- a/languages.Rmd
+++ b/languages.Rmd
@@ -13,42 +13,7 @@ read_chunk("languages.R")
 
 ## Representativeness
 
-```{r frequency, fig.width=8}
-top20_language_summary %<>% order_language_by("frequency_rank", reverse = TRUE)
-freq_plot <- ggplot(top20_language_summary) +
-  aes(language_ordered, frequency) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(label = language_name), nudge_y = 2, hjust = 0) +
-  scale_x_discrete("", labels = c(">20", 20:1)) +
-  scale_y_continuous(breaks = seq(0, 400, by = 50)) +
-  coord_flip(ylim = c(0, 360), expand = FALSE) +
-  labs(x = "", y = "", title = "Frequency") +
-  theme_minimal()
-
-survey_languages <- collect_table("languages") %>%
-  count(language_name) %>%
-  arrange(desc(n)) %>%
-  mutate(survey_rank = 1:n()) %>%
-  select(language_name, survey_rank)
-
-stack_overflow <- collect_table("stack_overflow") %>%
-  count(language_name) %>%
-  arrange(desc(n)) %>%
-  mutate(stack_overflow_rank = 1:n()) %>%
-  select(language_name, stack_overflow_rank)
-  
-compare_ranks <- left_join(survey_languages, stack_overflow)
-rank_corr_plot <- ggplot(compare_ranks) +
-  aes(survey_rank, stack_overflow_rank) +
-  geom_point() +
-  geom_abline(intercept = 0, slope = 1) +
-  geom_label(aes(label = language_name), data = filter(compare_ranks, survey_rank <= 20)) +
-  scale_x_reverse(breaks = c(1, seq(5, 30, by = 5)), position = "top") +
-  scale_y_reverse(breaks = c(1, seq(5, 30, by = 5)), position = "right") +
-  coord_cartesian(xlim = c(0, 30), ylim = c(0, 30), expand = FALSE) +
-  labs(x = "Rank in Sample", y = "Stack Overflow Rank") +
-  theme_minimal()
-
+```{r representativeness, fig.width=8}
 gridExtra::grid.arrange(freq_plot, rank_corr_plot, nrow = 1)
 ```
 
