--- a/languages.Rmd
+++ b/languages.Rmd
@@ -4,8 +4,8 @@ title: "Programming languages"
 ```{r config, include=FALSE}
 library(knitr)
 opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE,
-               fig.width=4, fig.height=4,
-               cache=FALSE)
+               fig.width=4, fig.height=4, dpi=300,
+               cache=TRUE)
 read_chunk("languages.R")
 ```
 ```{r setup}
