--- a/beliefs.Rmd
+++ b/beliefs.Rmd
@@ -1,5 +1,9 @@
 ---
 title: Beliefs about the effects of programming on thinking.
+md_document:
+  variant: gfm
+  toc: yes
+  toc_depth: 2
 ---
 ```{r config, include=FALSE}
 library(knitr)
