--- a/languages.Rmd
+++ b/languages.Rmd
@@ -1,5 +1,9 @@
 ---
 title: "Programming languages"
+md_document:
+  variant: gfm
+  toc: yes
+  toc_depth: 2
 ---
 ```{r config, include=FALSE}
 library(knitr)
@@ -7,6 +11,7 @@ opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE,
                fig.width=4, fig.height=4, dpi=300,
                cache=TRUE)
 read_chunk("languages.R")
+devtools::load_all()
 ```
 ```{r setup}
 ```
@@ -15,6 +20,18 @@ read_chunk("languages.R")
 
 ```{r representativeness, fig.width=8}
 gridExtra::grid.arrange(freq_plot, rank_corr_plot, nrow = 1)
+```
+
+```{r stack-overflow-table, results='asis'}
+n_survey <- length(unique(collect_table("responses")$subj_id))
+n_stack_overflow <- length(unique(collect_table("stack_overflow")))
+
+tribble(
+  ~Survey, ~`N Respondents`,
+  "Our Survey", n_survey,
+  "Stack Overflow Developer Survey", n_stack_overflow
+) %>%
+  kable()
 ```
 
 ## Experience
