--- a/data-blitz.Rmd
+++ b/data-blitz.Rmd
@@ -11,10 +11,12 @@ output:
 library(knitr)
 opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE,
                cache=TRUE)
-read_chunk("languages.R")
+read_chunk("data-blitz.R")
 devtools::load_all()
 ```
-```{r setup}
+```{r languages}
+```
+```{r beliefs}
 ```
 
 # Research questions
@@ -31,17 +33,13 @@ This data blitz:
 # Who cares about programming languages?
 
 - Hundreds of different programming languages, but all are formally equivalent.
-- Computer scientists think a lot about the differences between
-  languages.
+- Computer scientists think a lot about the differences between languages.
 - Can we measure the *impact* of different programming languages on
   individual computer scientists?
   
 # Can we measure differences between programmers who use different languages?
 
 Of course! What should we predict and why does it matter?
-
-> [Lisp] has assisted a number of our most gifted fellow humans in thinking previously 
-  impossible thoughts. (Dijkstra, 1972)
 
 H1
 : Functional languages are more transformative than other language paradigms.
@@ -55,7 +53,13 @@ H2
 gridExtra::grid.arrange(freq_plot, rank_corr_plot, nrow = 1)
 ```
 
-# Functional programming languages
+# Language paradigms
+
+> [Lisp] has assisted a number of our most gifted fellow humans in thinking previously 
+  impossible thoughts.  
+> -- Dijkstra, 1972
+
+# Lisp is a type of functional languages
 
 ```{r functional-languages}
 crotchet::draw_svg("imgs/functional-languages.svg")
@@ -79,8 +83,32 @@ crotchet::draw_svg("imgs/functional-v-imperative.svg")
 crotchet::draw_svg("imgs/functional-v-object.svg")
 ```
 
-# Full Venn Diagram
+# Programming paradigm venn
 
 ```{r functional-v-object-v-imperative}
 crotchet::draw_svg("imgs/functional-v-object-v-imperative.svg")
+```
+
+# Programmers know multiple languages
+
+```{r multiple-languages}
+crotchet::draw_svg("imgs/multiple-languages.svg")
+```
+
+# Solutions to the multiple languages problem
+
+- Top language only.
+- Count all reported languages.
+- _Weigh languages based on self reported proficiency._
+
+# Changed reasoning
+
+```{r changed-reasoning-by-language, cache=FALSE}
+by_language_plot("cr1")
+```
+
+# Changed reasoning
+
+```{r changed-reasoning-by-paradigm, cache=FALSE}
+by_paradigm_plot("cr1")
 ```
