--- a/languages.Rmd
+++ b/languages.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Programming languages"
 md_document:
-  variant: gfm
   toc: yes
   toc_depth: 2
+  variant: gfm
 ---
 ```{r config, include=FALSE}
 library(knitr)
@@ -16,7 +16,7 @@ devtools::load_all()
 ```{r setup}
 ```
 
-## Representativeness
+# Representativeness
 
 ```{r representativeness, fig.width=8}
 gridExtra::grid.arrange(freq_plot, rank_corr_plot, nrow = 1)
@@ -34,12 +34,12 @@ tribble(
   kable()
 ```
 
-## Experience
+# Experience
 
 ```{r languages-per-person}
 ```
 
-## Proficiency
+# Proficiency
 
 ```{r proficiency}
 top20_language_summary %<>% order_language_by("proficiency_rank", reverse = TRUE)
@@ -51,7 +51,7 @@ ggplot(top20_language_summary) +
   labs(x = "", title = "Proficiency")
 ```
 
-## Rank correlations
+# Rank correlations
 
 ```{r correlations}
 top20_language_summary %>%
@@ -80,7 +80,7 @@ ggplot(filter(top20_language_summary, language_name != "other")) +
   ggtitle("Experience-proficiency correlation")
 ```
 
-## Intuitiveness
+# Intuitiveness
 
 ```{r intuitiveness, fig.width=6}
 top20_intuitive <- filter(top20_ratings_summary, question_name == "intuitiveness")
@@ -100,7 +100,7 @@ ggplot(top20_intuitive) +
   labs(x = "", y = "", title = "Intuitiveness")
 ```
 
-## Reuse
+# Reuse
 
 ```{r reuse, fig.width=6}
 top20_reuse_adaptive_levels <- top20_reuse %>%
@@ -118,12 +118,34 @@ ggplot(top20_reuse) +
   labs(x = "", y = "", title = "Reuse")
 ```
 
-## Paradigms
+# Programming paradigms
 
-```{r top-paradigms, results="asis"}
-kable(top_paradigms_tbl)
+## Functional programming languages
+
+```{r functional-languages}
+crotchet::draw_svg("imgs/functional-languages.svg")
 ```
 
-```{r paradigms-of-top-languages, results="asis"}
-kable(top20_language_paradigms)
+## Programming languages have many paradigms
+
+```{r python-paradigms}
+crotchet::draw_svg("imgs/python-paradigms.svg")
+```
+
+## Functional versus imperative languages
+
+```{r functional-v-imperative}
+crotchet::draw_svg("imgs/functional-v-imperative.svg")
+```
+
+## Functional versus object-oriented languages
+
+```{r functional-v-object-oriented}
+crotchet::draw_svg("imgs/functional-v-object.svg")
+```
+
+# Full Venn Diagram
+
+```{r functional-v-object-v-imperative}
+crotchet::draw_svg("imgs/functional-v-object-v-imperative.svg")
 ```
