--- a/languages.Rmd
+++ b/languages.Rmd
@@ -13,7 +13,7 @@ opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE,
 read_chunk("languages.R")
 devtools::load_all()
 ```
-```{r setup}
+```{r languages}
 ```
 
 # Representativeness
@@ -36,8 +36,6 @@ tribble(
 
 # Experience
 
-```{r languages-per-person}
-```
 
 # Proficiency
 
