--- a/beliefs.Rmd
+++ b/beliefs.Rmd
@@ -12,7 +12,7 @@ opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE,
                cache=TRUE)
 read_chunk("beliefs.R")
 ```
-```{r setup}
+```{r beliefs}
 ```
 
 # Questions
